Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115461

[REG 6.5.1 -> 6.5.2] QT_WIDGETS_HIGHDPI_DOWNSCALE is broken again

XMLWordPrintable

    • Linux/X11
    • 9505305c4 (dev), 19a455a50 (6.5), 941b2de2e (6.6)

      Looks like the commits fixing QTBUG-113811 broke QT_WIDGETS_HIGHDPI_DOWNSCALE, it's now drawing really ugly (apparently due to nearest scaling instead of linear scaling).

      Would be really nice if every change reverting to pre-6.4 behavior in qbackingstoredefaultcompositor.cpp would be reviewed with QT_WIDGETS_HIGHDPI_DOWNSCALE enabled as it's a second such change in that file that breaks QT_WIDGETS_HIGHDPI_DOWNSCALE.

        1. screenshot-1.png
          132 kB
          Laszlo Agocs
        2. screenshot-2.png
          24 kB
          Laszlo Agocs
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            ilya-fedin Ilya Fedin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes